properly clips feature player container & corrects spacing in text container

--- a/src/modules/key-feature.module/module.css
+++ b/src/modules/key-feature.module/module.css
@@ -22,15 +22,18 @@
 .key-features__player {
   border-radius: 0 0 150px 150px;
   height: 345px;
+  overflow: hidden;
   position: relative;
   width: 75.4%;
+  z-index: 1;
 }
 
-.key-features__player--background-circle {
-  border-radius: 100%;
+.key-features__player--background {
+  border-radius: 150px 150px 0 0;
   display: block;
-  height: 100%;
+  height: 75%;
   left: 50%;
+  margin: auto;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -40,7 +43,7 @@
 
 .key-features__player--phone-grey {
   background: linear-gradient(180deg, #525E6A, 33%, #3C3C3C);
-  border-radius: 10px 10px 150px 150px;
+  border-radius: 10px;
   display: block;
   height: 345px;
   left: 50%;
@@ -48,13 +51,13 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: calc(100% - 40px);
-  z-index: 2;
+  z-index: 1;
 }
 
 .key-features__player--phone-black {
   background-color: transparent;
   border: solid #030303;
-  border-radius: 8px 8px 150px 150px;
+  border-radius: 8px;
   border-width: 12px 4px 0;
   height: 100%;
   margin: 0 auto;
@@ -97,8 +100,6 @@
 }
 
 .key-features__player--img {
-  /* background: cover; */
-  border-radius: 0 0 150px 150px;
   height: 100%;
   width: 100%;
   z-index: 2;
@@ -108,6 +109,7 @@
   display: flex;
   flex-direction: column;
   gap: 9px;
+  padding: 1.5rem 0.15rem 0;
 }
 
 .key-features__title {
@@ -117,4 +119,18 @@
   font-size: 18px;
   font-weight: 600;
   line-height: 28px;
+}
+
+.key-features__description {
+  margin: 0;
+  max-height: 104px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: pre-wrap;
+  width: fit-content;
+}
+
+.key-features__description,
+.key-features__link {
+  line-height: 26px;
 }
